# assistant

./: .coverage  .env.example  .gitignore  README.md  export_slides.py  main.py  pyproject.toml  run.py
assistant/api/: app.py  models.py  session_store.py
assistant/api/routes/: chat.py  health.py  identity.py  memory.py  sessions.py  voice.py
assistant/config/: __init__.py  settings.py
assistant/conversation/: engine.py  history.py  prompt_builder.py
assistant/core/: assistant.py  identity.py  session.py
assistant/database/: connection.py  migrations.py  schema.sql
assistant/emotions/: engine.py  state.py  store.py
assistant/llm/: base.py  factory.py  ollama_provider.py
assistant/memory/: embeddings.py  long_term.py  manager.py  short_term.py  summarizer.py
assistant/time_awareness/: service.py
assistant/tools/: base.py  notes.py  registry.py  web_search.py
assistant/voice/: stt.py  tts.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: assistant.js
frontend/src/components/: ChatHeader.jsx  ChatInput.jsx  MemoryModal.jsx  MessageBubble.jsx  SettingsModal.jsx  SetupModal.jsx  Sidebar.jsx
tests/: conftest.py
tests/integration/: test_api.py  test_conversation_flow.py
tests/unit/: test_time_awareness.py
