[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "Always-On Personal AI Assistant"
authors = ["Andre R. Volel <avolel@gmail.com>"]

[tool.poetry.dependencies]
python           = "^3.11"
httpx            = "^0.27"
pydantic         = "^2.6"
pydantic-settings= "^2.2"
chromadb         = "^0.5"
faster-whisper   = "^1.0"
pyttsx3          = "^2.90"
sounddevice      = "^0.4"
fastapi          = "^0.111"
uvicorn          = {extras = ["standard"], version = "^0.29"}
python-multipart = "^0.0.9"
sentence-transformers = "^3.0"
posthog = ">=2.4.0,<6.0.0"
 
[tool.poetry.dev-dependencies]
pytest           = "^8.0"
pytest-asyncio   = "^0.23"
pytest-cov       = "^5.0"
httpx            = "^0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"